--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "main": "app.js",
   "dependencies": {
-    "express": "^4.18.2",
-    "pg": "^8.7.3",
     "body-parser": "^1.20.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^4.18.2",
+    "path": "^0.12.7",
+    "pg": "^8.7.3"
   }
 }
